--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -51,7 +51,7 @@
           <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.Git}"/>
         </TabItem.Header>
 
-        <Grid Margin="16,4,16,8" RowDefinitions="32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+        <Grid Margin="16,4,16,8" RowDefinitions="32,32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
           <TextBlock Grid.Row="0" Grid.Column="0"
                      HorizontalAlignment="Right" VerticalAlignment="Center"
                      Margin="0,0,8,0"
@@ -72,12 +72,31 @@
                    CornerRadius="3"
                    Watermark="{DynamicResource Text.Configure.Email.Placeholder}"
                    Text="{Binding UserEmail, Mode=TwoWay}"/>
-
+          
           <TextBlock Grid.Row="2" Grid.Column="0"
                      HorizontalAlignment="Right" VerticalAlignment="Center"
                      Margin="0,0,8,0"
+                     Text="{DynamicResource Text.Configure.Git.DefaultRemote}"/>
+          <ComboBox Grid.Row="2" Grid.Column="1"
+                    Height="28" Padding="8,0"
+                    VerticalAlignment="Center" HorizontalAlignment="Stretch"
+                    ItemsSource="{Binding Remotes}"
+                    SelectedItem="{Binding DefaultRemote, Mode=TwoWay}">
+            <ComboBox.ItemTemplate>
+              <DataTemplate>
+                <StackPanel Orientation="Horizontal" Height="20" VerticalAlignment="Center">
+                  <Path Margin="0,6,8,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Remote}"/>
+                  <TextBlock Text="{Binding}"/>
+                </StackPanel>
+              </DataTemplate>
+            </ComboBox.ItemTemplate>
+          </ComboBox>
+
+          <TextBlock Grid.Row="3" Grid.Column="0"
+                     HorizontalAlignment="Right" VerticalAlignment="Center"
+                     Margin="0,0,8,0"
                      Text="{DynamicResource Text.Configure.Proxy}"/>
-          <TextBox Grid.Row="2" Grid.Column="1"
+          <TextBox Grid.Row="3" Grid.Column="1"
                    Height="28"
                    CornerRadius="3"
                    Watermark="{DynamicResource Text.Configure.Proxy.Placeholder}"
@@ -89,25 +108,25 @@
             </TextBox.InnerRightContent>
           </TextBox>
 
-          <TextBlock Grid.Row="3" Grid.Column="0"
+          <TextBlock Grid.Row="4" Grid.Column="0"
                      HorizontalAlignment="Right" VerticalAlignment="Center"
                      Margin="0,0,8,0"
                      Text="{DynamicResource Text.Preference.GPG.UserKey}"/>
-          <TextBox Grid.Row="3" Grid.Column="1"
+          <TextBox Grid.Row="4" Grid.Column="1"
                    Height="28"
                    CornerRadius="3"
                    Watermark="{DynamicResource Text.Preference.GPG.UserKey.Placeholder}"
                    Text="{Binding GPGUserSigningKey, Mode=TwoWay}"/>
 
-          <CheckBox Grid.Row="4" Grid.Column="1"
+          <CheckBox Grid.Row="5" Grid.Column="1"
                     Content="{DynamicResource Text.Preference.GPG.CommitEnabled}"
                     IsChecked="{Binding GPGCommitSigningEnabled, Mode=TwoWay}"/>
 
-          <CheckBox Grid.Row="5" Grid.Column="1"
+          <CheckBox Grid.Row="6" Grid.Column="1"
                     Content="{DynamicResource Text.Preference.GPG.TagEnabled}"
                     IsChecked="{Binding GPGTagSigningEnabled, Mode=TwoWay}"/>
 
-          <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
+          <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal">
             <CheckBox x:Name="AutoFetchCheckBox"
                       Content="{DynamicResource Text.Configure.Git.AutoFetch}"
                       IsChecked="{Binding EnableAutoFetch, Mode=TwoWay}"/>
