--- a/src/Views/Discard.axaml
+++ b/src/Views/Discard.axaml
@@ -2,7 +2,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
@@ -12,35 +11,69 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Discard}"/>
-
-    <Grid Margin="0,16,0,8" RowDefinitions="32,32" ColumnDefinitions="120,*">
-      <TextBlock Grid.Row="0" Grid.Column="0" Margin="0,0,8,0" HorizontalAlignment="Right" Text="{DynamicResource Text.Discard.Changes}"/>
-      <ContentControl Grid.Row="0" Grid.Column="1" Content="{Binding Mode}">
-        <ContentControl.DataTemplates>
-          <DataTemplate DataType="m:Null">
-            <StackPanel Orientation="Horizontal">
-              <Path Width="12" Height="12" Margin="0,2,0,0" Data="{StaticResource Icons.Folder.Open}"/>
-              <TextBlock Text="{DynamicResource Text.Discard.All}" Margin="4,0,0,0"/>
+    
+    <ContentControl Margin="0,16,0,8" Content="{Binding Mode}">
+      <ContentControl.DataTemplates>
+        <DataTemplate DataType="vm:DiscardAllMode">
+          <Grid RowDefinitions="Auto,Auto,36" ColumnDefinitions="120,*">
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Margin="0,0,8,0"
+                       HorizontalAlignment="Right"
+                       Text="{DynamicResource Text.Discard.Changes}"/>
+            <TextBlock Grid.Row="0" Grid.Column="1"
+                       Text="{DynamicResource Text.Discard.All}"/>
+            
+            <CheckBox Grid.Row="1" Grid.Column="1"
+                      Content="{DynamicResource Text.Discard.IncludeIgnored}"
+                      IsChecked="{Binding IncludeIgnored, Mode=TwoWay}"/>
+            
+            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
+              <Path Width="14" Height="14" 
+                    Data="{StaticResource Icons.Error}" 
+                    Fill="DarkOrange"/>
+              <TextBlock Margin="4,0,0,0"
+                         Text="{DynamicResource Text.Discard.Warning}"
+                         Foreground="{DynamicResource Brush.FG2}"/>
             </StackPanel>
-          </DataTemplate>
-          
-          <DataTemplate DataType="x:String">
-            <StackPanel Orientation="Horizontal">
+          </Grid>
+        </DataTemplate>
+        
+        <DataTemplate DataType="vm:DiscardSingleFile">
+          <Grid RowDefinitions="32,32" ColumnDefinitions="120,*">
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Margin="0,0,8,0"
+                       HorizontalAlignment="Right"
+                       Text="{DynamicResource Text.Discard.Changes}"/>
+            <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
               <Path Width="12" Height="12" Data="{StaticResource Icons.File}"/>
-              <TextBlock Text="{Binding}" Margin="4,0,0,0"/>
+              <TextBlock Text="{Binding Path}" Margin="4,0,0,0"/>
             </StackPanel>
-          </DataTemplate>
-
-          <DataTemplate DataType="x:Int32">
-            <StackPanel Orientation="Horizontal">
+            
+            <TextBlock Grid.Row="1" Grid.Column="1" 
+                       VerticalAlignment="Center"
+                       Text="{DynamicResource Text.Discard.Warning}"
+                       Foreground="{DynamicResource Brush.FG2}"/>
+          </Grid>
+        </DataTemplate>
+        
+        <DataTemplate DataType="vm:DiscardMultipleFiles">
+          <Grid RowDefinitions="32,32" ColumnDefinitions="120,*">
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Margin="0,0,8,0"
+                       HorizontalAlignment="Right"
+                       Text="{DynamicResource Text.Discard.Changes}"/>
+            <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
               <Path Width="12" Height="12" Data="{StaticResource Icons.File}"/>
-              <TextBlock Text="{Binding Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='Discard.Total'}" Margin="4,0,0,0"/>
+              <TextBlock Text="{Binding Count, Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='Discard.Total'}" Margin="4,0,0,0"/>
             </StackPanel>
-          </DataTemplate>
-        </ContentControl.DataTemplates>
-      </ContentControl>
-
-      <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Text="{DynamicResource Text.Discard.Warning}" Foreground="{DynamicResource Brush.FG2}"/>
-    </Grid>
+            
+            <TextBlock Grid.Row="1" Grid.Column="1" 
+                       VerticalAlignment="Center"
+                       Text="{DynamicResource Text.Discard.Warning}"
+                       Foreground="{DynamicResource Brush.FG2}"/>
+          </Grid>
+        </DataTemplate>
+      </ContentControl.DataTemplates>
+    </ContentControl>
   </StackPanel>
 </UserControl>
