--- a/src/Resources/Locales/de_DE.axaml
+++ b/src/Resources/Locales/de_DE.axaml
@@ -454,6 +454,8 @@
   <x:String x:Key="Text.Push.Title" xml:space="preserve">Push</x:String>
   <x:String x:Key="Text.Push.To" xml:space="preserve">Remote-Branch:</x:String>
   <x:String x:Key="Text.Push.Tracking" xml:space="preserve">Remote-Branch verfolgen</x:String>
+  <x:String x:Key="Text.Push.IsNewBranch" xml:space="preserve">Neuer Zweig:</x:String>
+  <x:String x:Key="Text.Push.NewBranch" xml:space="preserve">Neuer Zweig</x:String>
   <x:String x:Key="Text.Push.WithAllTags" xml:space="preserve">Alle Tags pushen</x:String>
   <x:String x:Key="Text.PushTag" xml:space="preserve">Tag zum Remote pushen</x:String>
   <x:String x:Key="Text.PushTag.PushAllRemotes" xml:space="preserve">Zu allen Remotes pushen</x:String>
