--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -460,6 +460,8 @@
   <x:String x:Key="Text.Push.Title" xml:space="preserve">推送到遠端存放庫</x:String>
   <x:String x:Key="Text.Push.To" xml:space="preserve">遠端分支:</x:String>
   <x:String x:Key="Text.Push.Tracking" xml:space="preserve">追蹤遠端分支</x:String>
+  <x:String x:Key="Text.Push.IsNewBranch" xml:space="preserve">新分支:</x:String>
+  <x:String x:Key="Text.Push.NewBranch" xml:space="preserve">新分支</x:String>
   <x:String x:Key="Text.Push.WithAllTags" xml:space="preserve">同時推送標籤</x:String>
   <x:String x:Key="Text.PushTag" xml:space="preserve">推送標籤到遠端存放庫</x:String>
   <x:String x:Key="Text.PushTag.PushAllRemotes" xml:space="preserve">推送到所有遠端存放庫</x:String>
