--- a/src/Views/Push.axaml
+++ b/src/Views/Push.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="500"
              x:Class="SourceGit.Views.Push"
              x:DataType="vm:Push">
   <StackPanel Orientation="Vertical" Margin="8,0">
@@ -12,7 +12,7 @@
                Classes="bold"
                Text="{DynamicResource Text.Push.Title}"/>
 
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,Auto,Auto,32,32" ColumnDefinitions="130,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,Auto,Auto,32,32,32" ColumnDefinitions="130,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -60,7 +60,9 @@
                 Height="28" Padding="8,0"
                 VerticalAlignment="Center" HorizontalAlignment="Stretch"
                 ItemsSource="{Binding RemoteBranches}"
-                SelectedItem="{Binding SelectedRemoteBranch, Mode=TwoWay}">
+                SelectedItem="{Binding SelectedRemoteBranch, Mode=TwoWay}"
+                IsEnabled="{Binding !IsNewBranch}"
+                >
         <ComboBox.ItemTemplate>
           <DataTemplate x:DataType="{x:Type m:Branch}">
             <StackPanel Orientation="Horizontal" Height="20" VerticalAlignment="Center">
@@ -70,24 +72,37 @@
           </DataTemplate>
         </ComboBox.ItemTemplate>
       </ComboBox>
+      <CheckBox Grid.Row="3" Grid.Column="0"
+                  Height="32"
+                  Margin="0,0,8,0"
+                  HorizontalAlignment="Right" VerticalAlignment="Center"
+                  Content="{DynamicResource Text.Push.IsNewBranch}"
+                  IsChecked="{Binding IsNewBranch, Mode=TwoWay}"
+                 />
 
-      <CheckBox Grid.Row="3" Grid.Column="1"
+      <TextBox   Grid.Row="3" Grid.Column="1"   x:Name="NewBranch"
+               Height="28"
+               CornerRadius="3"
+               IsVisible="{Binding IsNewBranch}"
+               Watermark="{DynamicResource Text.Push.NewBranch}"
+               Text="{Binding NewBranch.Name, Mode=TwoWay}"/>
+      <CheckBox Grid.Row="4" Grid.Column="1"
                 Height="32"
                 Content="{DynamicResource Text.Push.Tracking}"
                 IsChecked="{Binding Tracking, Mode=TwoWay}"
                 IsVisible="{Binding IsSetTrackOptionVisible}"/>
 
-      <CheckBox Grid.Row="4" Grid.Column="1"
+      <CheckBox Grid.Row="5" Grid.Column="1"
                 Height="32"
                 Content="{DynamicResource Text.Push.CheckSubmodules}"
                 IsChecked="{Binding CheckSubmodules, Mode=TwoWay}"
-                IsVisible="{Binding IsCheckSubmodulesVisible}"/>
+                IsVisible="{Binding IsCheckSubmodulesVisible}"/>  
 
-      <CheckBox Grid.Row="5" Grid.Column="1"
+      <CheckBox Grid.Row="6" Grid.Column="1"
                 Content="{DynamicResource Text.Push.WithAllTags}"
                 IsChecked="{Binding PushAllTags, Mode=TwoWay}"/>
 
-      <CheckBox Grid.Row="6" Grid.Column="1"
+      <CheckBox Grid.Row="7" Grid.Column="1"
                 Content="{DynamicResource Text.Push.Force}"
                 IsChecked="{Binding ForcePush, Mode=TwoWay}"/>
     </Grid>
