--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -59,14 +59,14 @@
     <!-- Body -->
     <Border Grid.Row="2" Margin="8,0,8,8" BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}">
       <Grid RowDefinitions="*,3,*">
-        <ListBox Grid.Row="0"
-                 Background="{DynamicResource Brush.Contents}"
-                 ItemsSource="{Binding Items}"
-                 SelectionMode="Single"
-                 SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto"
-                 KeyDown="OnItemsListBoxKeyDown">
+        <v:InteractiveRebaseListBox Grid.Row="0"
+                                    Focusable="True"
+                                    Background="{DynamicResource Brush.Contents}"
+                                    ItemsSource="{Binding Items}"
+                                    SelectionMode="Single"
+                                    SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}"
+                                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                    ScrollViewer.VerticalScrollBarVisibility="Auto">
           <ListBox.Styles>
             <Style Selector="ListBoxItem">
               <Setter Property="Margin" Value="0"/>
@@ -213,18 +213,18 @@
                 <TextBlock Grid.Column="6" Classes="primary" Text="{Binding Commit.CommitterTimeStr}" Margin="8,0"/>
 
                 <!-- MoveUp Button -->
-                <Button Grid.Column="7" Classes="icon_button" Click="OnMoveItemUp" ToolTip.Tip="{DynamicResource Text.InteractiveRebase.MoveUp}">
+                <Button Grid.Column="7" Classes="icon_button" Click="OnMoveItemUp" ToolTip.Tip="Alt+Up">
                   <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Up}"/>
                 </Button>
                 
                 <!-- MoveDown Button -->
-                <Button Grid.Column="8" Classes="icon_button" Click="OnMoveItemDown" ToolTip.Tip="{DynamicResource Text.InteractiveRebase.MoveDown}">
+                <Button Grid.Column="8" Classes="icon_button" Click="OnMoveItemDown" ToolTip.Tip="Alt+Down">
                   <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Down}"/>
                 </Button>
               </Grid>
             </DataTemplate>
           </ListBox.ItemTemplate>
-        </ListBox>
+        </v:InteractiveRebaseListBox>
 
         <v:LoadingIcon Grid.Row="0" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" IsVisible="{Binding IsLoading}"/>
 
