--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -2,6 +2,7 @@
   <x:String x:Key="Text.About" xml:space="preserve">About</x:String>
   <x:String x:Key="Text.About.Menu" xml:space="preserve">About SourceGit</x:String>
   <x:String x:Key="Text.About.BuildWith" xml:space="preserve">• Build with </x:String>
+  <x:String x:Key="Text.About.Chart" xml:space="preserve">• Chart is rendered by </x:String>
   <x:String x:Key="Text.About.Copyright" xml:space="preserve">© 2024 sourcegit-scm</x:String>
   <x:String x:Key="Text.About.Editor" xml:space="preserve">• TextEditor from </x:String>
   <x:String x:Key="Text.About.Fonts" xml:space="preserve">• Monospace fonts come from </x:String>
