--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -49,7 +49,7 @@
              HorizontalAlignment="Center"
              VerticalAlignment="Center"/>
 
-      <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,8,32,8">
+      <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,8,32,16">
         <StackPanel Height="48" Orientation="Horizontal">
           <TextBlock Classes="bold" Text="SourceGit" FontSize="32" />
           <Border Margin="12,0,0,0" Height="20" CornerRadius="10" Background="{DynamicResource Brush.Accent}" Effect="drop-shadow(0 0 6 #40000000)">
@@ -72,6 +72,11 @@
           <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
             <TextBlock Text="{DynamicResource Text.About.Fonts}" />
             <TextBlock Text="JetBrains Mono" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitJetBrainsMonoFont"/>
+          </StackPanel>
+
+          <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
+            <TextBlock Text="{DynamicResource Text.About.Chart}" />
+            <TextBlock Text="LiveCharts2" Cursor="Hand" Foreground="{DynamicResource Brush.Accent}" TextDecorations="Underline" PointerPressed="OnVisitLiveCharts2"/>
           </StackPanel>
 
           <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
